--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "shortid": "^2.2.16"
   }
 }
